RESOLVED FIXED280233
[Catalyst] Books sometimes crashes when swiping between pages with trackpad
https://bugs.webkit.org/show_bug.cgi?id=280233
Summary [Catalyst] Books sometimes crashes when swiping between pages with trackpad
Wenson Hsieh
Reported 2024-09-23 16:15:31 PDT
Attachments
Wenson Hsieh
Comment 1 2024-09-23 16:21:03 PDT
EWS
Comment 2 2024-09-23 17:52:05 PDT
Committed 284125@main (2925691333c5): <https://commits.webkit.org/284125@main> Reviewed commits have been landed. Closing PR #34130 and removing active labels.
EWS
Comment 3 2024-09-25 16:19:50 PDT
Committed 283286.139@safari-7620-branch (154dc7de7a81): <https://commits.webkit.org/283286.139@safari-7620-branch> Reviewed commits have been landed. Closing PR #1909 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.