[Catalyst] Books sometimes crashes when swiping between pages with trackpad https://bugs.webkit.org/show_bug.cgi?id=280233 rdar://135813052

Reviewed by Aditya Keerthi.

Reintroduce a null check for the web process' `IPC::Connection`, which was removed in 282353@main.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView ensurePositionInformationIsUpToDate:]):

Canonical link: https://commits.webkit.org/284125@main